<resources>
    <string name="app_name">Control de Riego</string>

    <string name="action_settings">Opciones</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="button_refresh_variables">Obtener últimos valores</string>
    <string name="button_refresh">Solicitar nuevos valores</string>
    <string name="button_refresh_params">Obtener parámetros</string>

    <string name="temperature_label">Temperatura:</string>
    <string name="humidity_label">Humedad:</string>
    <string name="rain_label">¿Está lloviendo?</string>
    <string name="forecast_label">Próximas precipitaciones previstas:</string>
    <string name="timestamp_label">Hora de adquisición de los valores:</string>

    <string name="missingWifi">Por favor conectese a la red local WiFi</string>
    <string name="unabletoconnect">No se puede establecer conexión con el sistema</string>

    <string name="refreshRate_label">Tasa de refresco de las variables de los sensores (segundos):</string>
    <string name="refreshForecastRate_label">Tasa de solicitud del pronóstico meteorológico (minutos):</string>
    <string name="location_label">Ubicación (para obtener el pronóstico meteorológico). Introducir en la forma "City,Country" (en inglés):</string>
    <string name="actuator_label">Riego conectado:</string>

    <string name="save_button">Guardar</string>

    <string name="ok">OK</string>

    <string name="tab_1">General</string>
    <string name="tab_2">Avanzado</string>

    <string name="success">Actualizado</string>
    <string name="saved">Guardado</string>
    <string name="activar_riego">Activar riego 10s</string>
    <string name="desconectar_riego">Desconectar riego 10s</string>
    <string name="min_humidity">Humedad a la que encender el riego en condiciones normales:</string>
    <string name="humidity_min_forecast">Humedad a la que encender el riego si se esperan precipitaciones en 1 día o está lloviendo:</string>
    <string name="min_critical_humidity">Humedad crítica a la que encender el riego bajo cualquier circunstancia:</string>
    <string name="max_humidity">Humedad a la que desconectar el riego:</string>
    <string name="humidity_time">Si no funciona el sensor de humedad y no va a llover, conectar el riego cada (en horas):</string>
    <string name="humidity_time_forecast">Si no funciona el sensor de humedad pero va a llover, conectar el riego cada (en horas):</string>
    <string name="humidity_time_off">Si no funciona el sensor de humedad, desconectar el riego tras (en minutos):</string>


</resources>
