<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout">

    <!-- sensors refresh rate Label -->
    <TextView
        android:id="@+id/refreshRateLabel"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/refreshRate_label"
        android:lines="3"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <!-- sensors refresh rate -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="5"
        android:textSize="14sp"
        android:id="@+id/refreshRate"
        android:layout_alignBottom="@id/refreshRateLabel"
        android:layout_toRightOf="@id/refreshRateLabel"
        android:layout_toEndOf="@id/refreshRateLabel"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

    <!-- save refresh rate button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:textSize="14sp"
        android:id="@+id/refreshRateSend"
        android:layout_alignBottom="@+id/refreshRate"
        android:layout_toRightOf="@+id/refreshRate"
        android:layout_toEndOf="@+id/refreshRate"/>

    <!-- forecast refresh rate Label -->
    <TextView
        android:id="@+id/refreshForecastRateLabel"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/refreshForecastRate_label"
        android:lines="3"
        android:layout_below="@+id/refreshRate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp" />

    <!-- forecast refresh rate -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        android:ems="5"
        android:id="@+id/refreshForecastRate"
        android:layout_alignBottom="@id/refreshForecastRateLabel"
        android:layout_toRightOf="@id/refreshForecastRateLabel"
        android:layout_toEndOf="@id/refreshForecastRateLabel"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

    <!-- save weather refresh rate button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:textSize="14sp"
        android:id="@+id/refreshWeatherRateSend"
        android:layout_alignBottom="@+id/refreshForecastRate"
        android:layout_toRightOf="@+id/refreshForecastRate"
        android:layout_toEndOf="@+id/refreshForecastRate"/>

    <!-- location Label -->
    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:lines="2"
        android:layout_below="@+id/refreshForecastRateLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp" />

    <!-- location -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text=""
        android:ems="15"
        android:id="@+id/location"
        android:textSize="14sp"
        android:layout_below="@+id/locationLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp" />

    <!-- save location button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:textSize="14sp"
        android:id="@+id/locationSend"
        android:layout_alignBottom="@+id/location"
        android:layout_toRightOf="@+id/location"
        android:layout_toEndOf="@+id/location" />

    <!-- Refresh button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_refresh_params"
        android:textSize="14sp"
        android:id="@+id/buttonGet"
        android:layout_below="@id/location"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>